--- a/src/styles/AdminAssignment.css
+++ b/src/styles/AdminAssignment.css
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     color: #2c3e51;
     background: #f5f5f5;
-    font-family: 'Ubuntu', sans-serif;
+    /* font-family: 'Ubuntu', sans-serif; */
   }
   
   .container {
