Change participant dashboard min height to 100vw

--- a/src/pages/participant-dashboard.astro
+++ b/src/pages/participant-dashboard.astro
@@ -25,7 +25,7 @@ const title = "Participant Dashboard";
     background: linear-gradient(#827bd2 0px, #433f6c 80vh);
     display: flex;
     height: 100%;
-    min-height: fit-content;
+    min-height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
